--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+<body>
+    
 <img src="./img/marca.png" height="500" width="500">
-
-
-
-
 <a href="https://1drv.ms/u/s!AgWvk1dMP3qOokLRB91_1A2uEJru?e=JRZYpJ" target="_blank"> <button> Registro de Fotos</button></a>
+
+</body>
+</html>
+
